feat: add header with navigation

--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
 </head>
 
 <body>
+    <header>
+        <p>Header Logo</p>
 
+        <nav>
+            <ul>
+                <li><a href="#">link one</a></li>
+                <li><a href="#">link two</a></li>
+                <li><a href="#">link three</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 
 </html>
