--- a/index.html
+++ b/index.html
@@ -20,6 +20,23 @@
             </ul>
         </nav>
     </header>
+
+    <main>
+        <section id="hero">
+            <div class="hero-left">
+                <h1>This website is <br>
+                    awesome</h1>
+                <p>This website has some subtext that goes under the <br>
+                    main title. It's a smaller font and the color is lower <br>
+                    contrast.</p>
+                <button class="signup-btn">Sign up</button>
+            </div>
+
+            <div class="hero-right">
+                this is a placeholder for an image
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
