--- a/index.html
+++ b/index.html
@@ -36,6 +36,32 @@
                 this is a placeholder for an image
             </div>
         </section>
+
+        <section id="info">
+            <h2>Some random information.</h2>
+
+            <div class="cards">
+                <div class="info-card">
+                    <div class="info-img"></div>
+                    <p class="info-text">this is some subtext under an illustration or image</p>
+                </div>
+
+                <div class="info-card">
+                    <div class="info-img"></div>
+                    <p class="info-text">this is some subtext under an illustration or image</p>
+                </div>
+
+                <div class="info-card">
+                    <div class="info-img"></div>
+                    <p class="info-text">this is some subtext under an illustration or image</p>
+                </div>
+
+                <div class="info-card">
+                    <div class="info-img"></div>
+                    <p class="info-text">this is some subtext under an illustration or image</p>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
