--- a/index.html
+++ b/index.html
@@ -62,6 +62,18 @@
                 </div>
             </div>
         </section>
+
+        <section id="quote">
+            <div class="quote-container">
+                <blockquote>
+                    <p class="quote-text"><i>This is an inspiring quote, or a testimonial from a customer. Maybe it's
+                            just filling up space, or maybe people will actually read it. Who knows? All i know is that
+                            it looks nice.</i></p>
+                </blockquote>
+
+                <p class="author">-Thor, God of Thunder</p>
+            </div>
+        </section>
     </main>
 </body>
 
