feat: add sign up section

--- a/index.html
+++ b/index.html
@@ -74,6 +74,19 @@
                 <p class="author">-Thor, God of Thunder</p>
             </div>
         </section>
+
+        <section id="signup">
+            <div class="signup-card">
+                <div class="signup-left">
+                    <h2>Call to action! It's time!</h2>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+
+                <div class="signup-right">
+                    <button class="signup-btn">Sign up</button>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
