--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
             </div>
         </section>
     </main>
+
+    <footer>
+        <p>Copyright &#169; The Odin Project 2021</p>
+    </footer>
 </body>
 
 </html>
