--- a/index.html
+++ b/index.html
@@ -24,11 +24,9 @@
     <main>
         <section id="hero">
             <div class="hero-left">
-                <h1>This website is <br>
-                    awesome</h1>
-                <p>This website has some subtext that goes under the <br>
-                    main title. It's a smaller font and the color is lower <br>
-                    contrast.</p>
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes under the main title. It's a smaller font and the color is
+                    lower contrast.</p>
                 <button class="signup-btn">Sign up</button>
             </div>
 
